--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,6 @@ footer li {
   margin: 5px;
   padding: 20px;
   text-align: center;
-}
-.caja1,
-.caja2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -120,11 +117,10 @@ footer li {
 }
 #cajaImg img {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
-  margin-left: 5%;
   width: 80%;
   border-radius: 5px;
-  display: block; /* Elimina el espacio extra debajo de la imagen */
-  margin-left: auto; /* Centra la imagen */
+  display: block;
+  margin-left: auto;
   margin-right: auto;
 }
 
@@ -206,37 +202,23 @@ button a {
 
 /* carousel */
 #carouselCaja {
-  width: 90%;
-  height: 90%;
+  width: 80%;
+  height: 80%;
+  margin-right: 20px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 #carousel {
-  width: 300%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cajaImg {
-  width: calc(100% / 3);
-  height: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(251, 251, 251);
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.9);
-}
-.cajaImg img {
-  width: 90%;
-  height: 90%;
-  border-radius: 10px;
-  object-fit: cover;
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.9);
+  width: 180%;
+  height: 95%;
 }
 .btnRet,
 .btnAvn {
-  width: 20px;
+  width: 15px;
   background-color: azure;
   border: none;
   border-radius: 4px;
